--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,5 @@ SET(HIDRAVFX_MAJOR_VERSION 0)
 SET(HIDRAVFX_MINOR_VERSION 1)
 SET(HIDRAVFX_PATCH_LEVEL 0)
 INCLUDE_DIRECTORIES(src)
-ADD_DEFINITIONS("-g -Wall -ansi -pedantic")
+ADD_DEFINITIONS("-g -Wall -ansi -pedantic -std=c99")
 ADD_SUBDIRECTORY(src bin)
