perl code generator instead of CPP, image accepted for all parameter.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,14 @@
-ADD_LIBRARY(hidra SHARED layer.c colorfx.c blending.c conform.c)
+ADD_LIBRARY(hidra SHARED layer.c effects.c)
 ADD_EXECUTABLE(hidravfx main.c options.c pnm.c)
 TARGET_LINK_LIBRARIES(hidravfx m hidra)
-INSTALL(TARGETS hidravfx hidra hidra
+INSTALL(
+  TARGETS hidravfx hidra hidra
   RUNTIME DESTINATION bin
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib)
+  
+ADD_CUSTOM_COMMAND(
+   OUTPUT  effects.c effects.h
+   COMMAND perl ../src/codegen.pl
+   DEPENDS codegen.pl effects.pl)
+  
