Color space conversions added (RGB, YIQ, LMS, XYZ, YCbCr, HSV, LAB, HSI, YC1C2)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-ADD_LIBRARY(hidra SHARED layer.c effects.c)
+ADD_LIBRARY(hidra SHARED layer.c effects.c color.c)
 ADD_EXECUTABLE(hidravfx main.c options.c pnm.c)
 TARGET_LINK_LIBRARIES(hidravfx m hidra)
 INSTALL(
@@ -7,7 +7,7 @@ INSTALL(
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib)
 INSTALL_FILES(/etc/bash_completion.d FILES hidravfx_completion)
-INSTALL_FILES(/usr/include/hidravfx .h effects.h layer.h hidra.h)
+INSTALL_FILES(/usr/include/hidravfx .h effects.h layer.h hidra.h color.h)
 ADD_CUSTOM_COMMAND(
    OUTPUT  effects.c effects.h
    COMMAND perl ../src/codegen.pl
