CMAKE file fix.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 ADD_LIBRARY(hidra SHARED layer.c effects.c color.c set.c convolution.c)
 ADD_EXECUTABLE(hidravfx main.c options.c pnm.c)
+TARGET_LINK_LIBRARIES(hidra m)
 TARGET_LINK_LIBRARIES(hidravfx m hidra)
 INSTALL(
   TARGETS hidravfx hidra hidra
